--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.2.4",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.1.0",
+    "@angular/material": "^14.2.4",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "animate.css": "^4.1.1",
+    "convert-array-to-csv": "^2.0.0",
+    "file-saver": "^2.0.5",
+    "jsonexport": "^3.2.0",
+    "ng-image-slider": "^6.1.0",
+    "ngx-csv": "^0.3.2",
+    "purecss": "^2.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
@@ -27,7 +37,11 @@
     "@angular-devkit/build-angular": "^14.1.0",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
+    "@types/convert-array-to-csv": "^2.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
+    "@types/jsonexport": "^3.0.2",
+    "@types/node": "^18.8.3",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
